--- a/xenon-part-api/src/main/resources/application.properties
+++ b/xenon-part-api/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=xenon-part-api
+
+spring.datasource.driver-class-name= org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost:5432/xenon_diplom
+spring.datasource.username= postgres
+spring.datasource.password= pass
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+server.port=8080
