--- a/xenon-part-ui/package.json
+++ b/xenon-part-ui/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^19.1.6",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.0",
+    "recharts": "^2.15.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
