--- a/xenon-part-api/src/main/resources/application.properties
+++ b/xenon-part-api/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
 server.port=8080
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot=DEBUG
+logging.level.root=DEBUG
