--- a/xenon-part-ui/package.json
+++ b/xenon-part-ui/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/recharts": "^1.8.29",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.1.0",
